# dns-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
include/: cache.hpp  connector.hpp
include/dnslib/: dns.hpp
include/dnslib/builder/: PacketBuilder.hpp
include/dnslib/interface/: ISerializable.hpp
include/dnslib/message/: DNSHeader.hpp  DNSMessage.hpp  DNSPacket.hpp  DNSQuestion.hpp
include/dnslib/parser/: PacketParser.hpp  RecordFactory.hpp
include/dnslib/records/: ARecord.hpp  ResourceRecord.hpp
include/dnslib/utils/: read.hpp  utils.hpp
include/utils/: etsqueue.hpp  log.hpp
lib/dnslib/: CMakeLists.txt
lib/dnslib/include/: dns.hpp
lib/dnslib/include/builder/: PacketBuilder.hpp
lib/dnslib/include/interface/: ISerializable.hpp
lib/dnslib/include/message/: DNSHeader.hpp  DNSMessage.hpp  DNSPacket.hpp  DNSQuestion.hpp
lib/dnslib/include/parser/: PacketParser.hpp  RecordFactory.hpp
lib/dnslib/include/records/: ARecord.hpp  CNAMERecord.hpp  MXRecord.hpp  NSRecord.hpp  PTRRecord.hpp  ResourceRecord.hpp  UnknownRecord.hpp  _records.hpp
lib/dnslib/include/utils/: read.hpp  types.hpp  utils.hpp
lib/dnslib/src/builder/: PacketBuilder.cpp
lib/dnslib/src/message/: DNSHeader.cpp  DNSPacket.cpp  DNSQuestion.cpp
lib/dnslib/src/parser/: PacketParser.cpp  RecordFactory.cpp
lib/dnslib/src/records/: ARecord.cpp  CNAMERecord.cpp  MXRecord.cpp  NSRecord.cpp  PTRRecord.cpp  UnknownRecord.cpp
lib/dnslib/src/utils/: read.cpp  utils.cpp
lib/dnslib/tests/: BuilderTests.cpp  HeaderTests.cpp  ParserTests.cpp  QuestionTests.cpp  RecordTests.cpp  SectionsTest.cpp  UnknownRecordTests.cpp  ValidationTests.cpp
src/: cache.cpp  connector.cpp  main.cpp  resolver.cpp
src/dnslib/builder/: PacketBuilder.cpp
src/dnslib/message/: DNSHeader.cpp  DNSPacket.cpp  DNSQuestion.cpp
src/dnslib/parser/: PacketParser.cpp  RecordFactory.cpp
src/dnslib/records/: ARecord.cpp
src/dnslib/utils/: read.cpp  utils.cpp
src/utils/: etsqueue.cpp
tests/: CMakeLists.txt  HeaderTests.cpp  ParserTests.cpp
